
AC_PREREQ(2.61)

AC_INIT([libomxil-study], [0.1], [no-define])
AC_CONFIG_AUX_DIR([.])
AC_CANONICAL_SYSTEM
AM_INIT_AUTOMAKE([foreign])
#AC_ARG_PROGRAM()

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADER([config.h])


# Checks for programs.
AC_PROG_CC()
AM_PROG_CC_C_O()
AC_PROG_CXX()
AC_PROG_RANLIB()
AC_PROG_INSTALL()
AC_PROG_LN_S()


# Checks for header files.
AC_HEADER_STDC()
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h strings.h unistd.h])


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST()
AC_C_INLINE()
AC_TYPE_OFF_T()
AC_TYPE_SIZE_T()
AC_TYPE_SSIZE_T()
AC_CHECK_SIZEOF(signed char)
AC_CHECK_SIZEOF(signed short int)
AC_CHECK_SIZEOF(signed int)
AC_CHECK_SIZEOF(signed long int)
AC_CHECK_SIZEOF(signed long long int)
AC_CHECK_SIZEOF(unsigned char)
AC_CHECK_SIZEOF(unsigned short int)
AC_CHECK_SIZEOF(unsigned int)
AC_CHECK_SIZEOF(unsigned long int)
AC_CHECK_SIZEOF(unsigned long long int)


# Checks for library functions.
AC_FUNC_MEMCMP()
AC_CHECK_FUNCS([memmove memset strcasecmp])


# Specify the Makefile
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile ])
#doc/Makefile


# Specify subdir of configure
#AC_CONFIG_SUBDIRS([src/other])

AC_OUTPUT()

