
AC_PREREQ(2.61)

AC_INIT([libomxil-study], [0.1], [no-define])
AC_CANONICAL_SYSTEM()
AC_ARG_PROGRAM()
AC_CONFIG_AUX_DIR([.])

AC_CONFIG_SRCDIR([src/main.cpp])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign])


# Checks for programs.
AC_PROG_CC()
AC_PROG_CXX()
AC_PROG_INSTALL()
AC_PROG_LN_S()
AC_PROG_LIBTOOL()
AM_PROG_CC_C_O()
LT_INIT()

#AC_SUBST(VAR, [var_value])


# Checks for header files.
AC_HEADER_STDC()
AC_CHECK_HEADERS([fcntl.h stdlib.h string.h strings.h unistd.h])
AC_CHECK_HEADERS([OMX_Core.h OMX_Component.h OMX_Types.h OMX_Audio.h OMX_Video.h])


# Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST()
AC_C_INLINE()
AC_TYPE_OFF_T()
AC_TYPE_SIZE_T()
AC_TYPE_SSIZE_T()
AC_CHECK_SIZEOF(unsigned long long int)


# Checks for library functions.
AC_FUNC_MEMCMP()
AC_CHECK_FUNCS([memmove memset strcasecmp])


# Checks for arguments.
AC_ARG_ENABLE(debug, 
	[  --enable-debug	  turn on debugging [[default=no]]],
	, enable_debug=no)
AC_MSG_CHECKING(whether to enable debuging)
AC_MSG_RESULT($enable_debug)
AM_CONDITIONAL(ENABLE_DEBUG, [test x$enable_debug = xyes])
if test x$enable_debug = xyes; then
	AC_DEFINE(ENABLE_DEBUG, 1, Define to enable the debug functions)
	CFLAGS="$CFLAGS -g -O0"
	CXXFLAGS="$CXXFLAGS -g -O0"
else
	CFLAGS="$CFLAGS -O2"
	CXXFLAGS="$CXXFLAGS -O2"
fi

AC_ARG_ENABLE(use_bellagio, 
	[  --enable-use-bellagio	  use libomxil-bellagio [[default=no]]],
	, enable_use_bellagio=no)
AC_MSG_CHECKING(whether to use libomxil-bellagio)
if test x$enable_use_bellagio = xyes; then
	AC_MSG_RESULT(yes)
else
	AC_MSG_RESULT(no)
fi
AM_CONDITIONAL(USE_BELLAGIO, test x$enable_use_bellagio = xyes)


# Specify the Makefile
AC_CONFIG_FILES([Makefile src/Makefile tests/Makefile ])
#doc/Makefile


# Specify subdir of configure
#AC_CONFIG_SUBDIRS([src/other])

AC_OUTPUT()

