
AC_PREREQ(2.61)

dnl ----------------------------------------
dnl Information on this package.
dnl ----------------------------------------
AC_INIT([omxil-mf], [0.1], [no-define])

AC_ARG_PROGRAM()

AC_CONFIG_SRCDIR([src/api/omxil.cpp])
AC_CONFIG_HEADER([config.h])
AC_CONFIG_AUX_DIR([.])
AC_CONFIG_MACRO_DIR([m4])

AM_INIT_AUTOMAKE([foreign])
LT_INIT()

dnl ----------------------------------------
dnl Checks for programs.
dnl ----------------------------------------
AC_PROG_CC()
AC_PROG_CXX()
AC_PROG_AWK()
AC_PROG_INSTALL()
AC_PROG_LN_S()
AC_PROG_LIBTOOL()
AC_PROG_SED()
AM_PROG_CC_C_O()
AM_PROG_LIBTOOL()

dnl AC_SUBST(VAR, [var_value])


dnl ----------------------------------------
dnl Checks for libraries.
dnl ----------------------------------------


dnl ----------------------------------------
dnl Checks for header files.
dnl ----------------------------------------
AC_HEADER_STDC()

dnl AC_CHECK_HEADERS([fcntl.h stdlib.h string.h strings.h unistd.h])


dnl ----------------------------------------
dnl Checks for types, structures, compiler characteristics.
dnl ----------------------------------------
AC_C_CONST()
AC_C_INLINE()

dnl AC_TYPE_OFF_T()
dnl AC_TYPE_SIZE_T()
dnl AC_TYPE_SSIZE_T()
dnl AC_CHECK_SIZEOF(unsigned long long int)


dnl ----------------------------------------
dnl Checks for library functions.
dnl ----------------------------------------
AC_FUNC_MEMCMP()

dnl AC_CHECK_FUNCS([memmove memset strcasecmp])
dnl AC_CHECK_LIB([xxxx], [func_xxxx], [], 
dnl	[AC_MSG_ERROR([cannot find libxxxx])])


dnl ----------------------------------------
dnl Checks for system services.
dnl ----------------------------------------


dnl ----------------------------------------
dnl Checks for arguments.
dnl ----------------------------------------
AC_ARG_ENABLE(debug, 
	AS_HELP_STRING([--enable-debug], 
		[turn on debugging [default=no]]),
	, enable_debug=no)
AC_MSG_CHECKING(whether to enable debuging)
AC_MSG_RESULT($enable_debug)
AM_CONDITIONAL(ENABLE_DEBUG, [test x$enable_debug = xyes])
if test x$enable_debug = xyes; then
	AC_DEFINE(ENABLE_DEBUG, 1, Define to enable the debug functions)
	CFLAGS="$CFLAGS -g -O0 "
	CXXFLAGS="$CXXFLAGS -g -O0 "
else
	CFLAGS="$CFLAGS -O2 "
	CXXFLAGS="$CXXFLAGS -O2 "
fi

AC_ARG_ENABLE(use_bellagio, 
	AS_HELP_STRING([--enable-use-bellagio],
		[use libomxil-bellagio [default=no]]),
	, enable_use_bellagio=no)
AC_MSG_CHECKING(whether to use libomxil-bellagio)
AC_MSG_RESULT($enable_use_bellagio)
AM_CONDITIONAL(USE_BELLAGIO, test x$enable_use_bellagio = xyes)
if test x$enable_use_bellagio = xyes; then
	AC_CHECK_HEADERS([OMX_Core.h OMX_Component.h OMX_Types.h OMX_Audio.h OMX_Video.h], [], 
		[AC_MSG_ERROR([cannot find OMX_Core.h])])
	AC_CHECK_LIB([omxil-bellagio], [OMX_Init], [], 
		[AC_MSG_ERROR([cannot find libomxil-bellagio])])
else
	:;
fi


dnl ----------------------------------------
dnl Output the configure.
dnl ----------------------------------------
AC_CONFIG_FILES([Makefile include/Makefile src/Makefile 
	component/Makefile 
	tests/Makefile tests/basic/Makefile])
#doc/Makefile

AC_CONFIG_SUBDIRS([component/empty ])

AC_OUTPUT()
