
BASE_DIR      = .
HEADER_DIR    = $(BASE_DIR)
RING_DIR      = $(BASE_DIR)/omxil_mf/ring
MF_HEADER_DIR = $(BASE_DIR)/omxil_mf

libomxil_mf_ladir = $(includedir)

nobase_libomxil_mf_la_HEADERS = \
	$(HEADER_DIR)/OMX_Audio.h \
	$(HEADER_DIR)/OMX_Component.h \
	$(HEADER_DIR)/OMX_ContentPipe.h \
	$(HEADER_DIR)/OMX_Core.h \
	$(HEADER_DIR)/OMX_Image.h \
	$(HEADER_DIR)/OMX_Index.h \
	$(HEADER_DIR)/OMX_IVCommon.h \
	$(HEADER_DIR)/OMX_Other.h \
	$(HEADER_DIR)/OMX_Types.h \
	$(HEADER_DIR)/OMX_Video.h \
	$(RING_DIR)/bit_buffer.hpp \
	$(RING_DIR)/bounded_bit_buffer.hpp \
	$(RING_DIR)/bounded_buffer.hpp \
	$(RING_DIR)/buffer_base.hpp \
	$(RING_DIR)/ring_buffer.hpp \
	$(MF_HEADER_DIR)/omxil_mf.h \
	$(MF_HEADER_DIR)/omx_reflector.hpp \
	$(MF_HEADER_DIR)/component.hpp \
	$(MF_HEADER_DIR)/port.hpp \
	$(MF_HEADER_DIR)/port_audio.hpp \
	$(MF_HEADER_DIR)/port_image.hpp \
	$(MF_HEADER_DIR)/port_video.hpp \
	$(MF_HEADER_DIR)/port_other.hpp \
	$(MF_HEADER_DIR)/scoped_log.hpp \
	$(MF_HEADER_DIR)/dprint.h
