
SUBDIRS = src tests 

omxil_mf_empty_common_cppflags = \
	$(AM_CPPFLAGS) \
	-Wall -Werror
omxil_mf_empty_common_cflags = \
	$(AM_CFLAGS)
omxil_mf_empty_common_cxxflags = \
	$(AM_CXXFLAGS) \
	-std=c++0x
omxil_mf_empty_common_ldflags = \
	$(AM_LDFLAGS)

export omxil_mf_empty_common_cppflags
export omxil_mf_empty_common_cflags
export omxil_mf_empty_common_cxxflags
export omxil_mf_empty_common_ldflags
