
noinst_LTLIBRARIES = libdebug.la

libdebug_la_SOURCES = \
	dprint.cpp

EXTRA_libdebug_la_SOURCES = 

libdebug_la_CPPFLAGS = $(omxil_mf_common_cppflags) \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src
libdebug_la_CFLAGS   = $(omxil_mf_common_cflags)
libdebug_la_CXXFLAGS = $(omxil_mf_common_cxxflags)
