
noinst_LTLIBRARIES = libregist.la

libregist_la_SOURCES = \
	register_component.cpp

EXTRA_libregist_la_SOURCES = \
	register_component.hpp

libregist_la_CPPFLAGS = $(omxil_mf_common_cppflags) \
	-I$(top_srcdir)/include \
	-I$(top_srcdir)/src
libregist_la_CFLAGS   = $(omxil_mf_common_cflags)
libregist_la_CXXFLAGS = $(omxil_mf_common_cxxflags)
libregist_la_LDFLAGS  = $(omxil_mf_common_ldflags)
